# SolidDesigner

./: .gitmodules  CMakeLists.txt  copyDllToBuildDir.bat
.github/workflows/: c-cpp.yml
Demos/: CMakeLists.txt
Demos/DemoDependencyPlugin/: CMakeLists.txt  SolidDemoDependencyPlugin.cpp  SolidDemoDependencyPluginComponent.cpp
Demos/DemoDependencyPlugin/Public/: SolidDemoDependencyPlugin.h  SolidDemoDependencyPluginComponent.h
Designer/APP/: CMakeLists.txt  main.cpp
Designer/DB/: CMakeLists.txt
Designer/DB/SolidDesignerModel/: CMakeLists.txt  SolidDesignerModel.cpp  SolidDesignerModel.h
Designer/Data/: ApplicationConfig.xml  UiApplicationConfig.xml
Designer/Data/Plugin/: SolidDemoDependencyPlugin.plugin.xml  SolidDemoPlugin.plugin.xml
Designer/Interaction/: CMakeLists.txt
Designer/Interaction/SolidDesignerInteraction/: CMakeLists.txt  SolidDesignerInteraction.cpp  SolidDesignerInteraction.h
Designer/UI/: CMakeLists.txt
Designer/UI/SolidDesignerCommand/: CMakeLists.txt
Designer/UI/SolidDesignerUI/: CMakeLists.txt  SolidDesignerUI.cpp  SolidDesignerUI.h
