##########################################################################################################
#--Date: 2023.02.19
#--Author:hananiah
#--Note:
##########################################################################################################

add_subdirectory(DemoPlugin)
add_subdirectory(DemoDependencyPlugin)














