##########################################################################################################
#--Date: 2018.03.10
#--Author:hananiah
#--Note:位于Designer/DB, 目的在于管理产品Designer的DB层
##########################################################################################################
message("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Start Designer/DB~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~")

message("产品Designer-DB dir is: ")
message("${PROJECT_SOURCE_DIR}")
add_subdirectory(SolidDesignerModel)

message("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~End Designer/DB~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~")













