##########################################################################################################
#--Date: 2018.03.10
#--Author:hananiah
#--Note:位于Designera/Interaction,目的在于管理产品SolidDesigner的交互层
##########################################################################################################
message("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Start SolidDesigner/INTERACTION~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~")

message("产品Designer-INTERACTION dir is: ")
message("${PROJECT_SOURCE_DIR}")
add_subdirectory(SolidDesignerInteraction)

message("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~End SolidDesigner/INTERACTION~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~")













