##########################################################################################################
#--Date: 2021.03.10
#--Author:hananiah
#--Note:位于Designer,目的在于管理产品Designer的所有的UI工程
##########################################################################################################
message("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Start Designer/UI~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~")

message("产品Designer-UI dir is: ")
message("${PROJECT_SOURCE_DIR}")
add_subdirectory(SolidDesignerUI)

message("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~End Designer/UI~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~")













